--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -1,11 +1,16 @@
-version: 1.0
-type: worker 
-name: stock-bot
-runtime: python
+user:
+  name: "Aritra"
+  github: "safari"
 
-build:
-  command: pip install -r requirements.txt
+runtime:
+  image: "python:3.11-slim"
 
-run:
-  command: python bot.py
-  restart_policy: always
+commands:
+  package: ""
+  build:
+    - "pip install -r requirements.txt"
+  start: "python bot.py"
+
+repository:
+  branch: "main"
+  auto_deploy: true
